fixed some spacing and added a quick bio thing

--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,7 @@ body {
   color: var(--c90);
   padding: 1rem;
   font-family: 'Poppins', sans-serif;
+  font-size: 1.2rem;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -27,7 +28,12 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1{
-  font-size: 2rem;
+  font-size: 3rem;
+}
+
+th, td{
+  color: var(--c90);
+  border-color: var(--c50);
 }
 
 .btn{
@@ -41,4 +47,10 @@ h1{
 .btn:hover{
   background-color: var(--c20);
   color: var(--c80);
+}
+
+.container{
+  margin: 0px;
+  width: 100%;
+  max-width: none;
 }
